--- a/《超光速通信理论白皮书》草案_v1.0.md
+++ b/《超光速通信理论白皮书》草案_v1.0.md
@@ -39,28 +39,35 @@
 ### 2.1 从泰勒级数到洛朗级数：测量的数学本质
 
 我们将一个未被观察的、处于自由演化中的量子系统（由其波函数 `Ψ` 描述）类比为一个在某个复平面区域 `D` 内**解析 (analytic)** 的复变函数 `f(z)`。所谓解析，即该函数在区域 `D` 内无限可微，表现出极度的平滑与和谐。在 `D` 内的任何一点 `z₀`，`f(z)` 都可以被完美地展开为一个**泰勒级数**：
-\[ f(z) = \sum_{n=0}^{\infty} a_n (z - z_0)^n \]
+```math
+f(z) = \sum_{n=0}^{\infty} a_n (z - z_0)^n
+```
 这个级数只包含 `(z - z_0)` 的非负整数次幂，代表了系统在该点未来的、确定性的演化潜力。
 
 现在，我们引入"测量"。在我们的模型中，测量仪器作为一个非解析的、结构化的边界条件，被强加于系统在点 `c` 的位置。这个相互作用破坏了函数 `f(z)` 在 `c` 点的解析性，使其在该点产生一个**奇点 (singularity)**。
 
 为了描述这个包含了奇点 `c` 的新系统，数学上必须从泰勒级数扩展到**洛朗级数**。在奇点 `c` 周围的一个环形域内，函数 `f(z)` 被表示为：
-\[ f(z) = \sum_{n=-\infty}^{\infty} a_n (z - c)^n = \underbrace{\sum_{n=0}^{\infty} a_n (z - c)^n}_{\text{解析部分}} + \underbrace{\sum_{n=1}^{\infty} b_n (z - c)^{-n}}_{\text{主要部分}} \]
+```math
+f(z) = \sum_{n=-\infty}^{\infty} a_n (z - c)^n = \underbrace{\sum_{n=0}^{\infty} a_n (z - c)^n}_{\text{解析部分}} + \underbrace{\sum_{n=1}^{\infty} b_n (z - c)^{-n}}_{\text{主要部分}}
+```
 洛朗级数中出现的负指数幂次项（即"主要部分"）是奇点存在的直接数学标志。因此，我们断言：
 **测量过程的数学本质，就是将被测系统的描述从一个纯粹的泰勒级数，转变为一个包含"主要部分"的洛朗级数。**
 
 ### 2.2 玻恩定则的起源：作为奇点留数的概率幅
 
 洛朗级数理论中最深刻、最有力的概念之一是**留数 (Residue)**。对于一个孤立奇点 `c`，其留数被定义为洛朗级数展开式中 `(z-c)⁻¹` 项的系数 `a₋₁`。
-\[ \text{Res}(f, c) = a_{-1} = \frac{1}{2\pi i} \oint_\gamma f(z) dz \]
+```math
+\text{Res}(f, c) = a_{-1} = \frac{1}{2\pi i} \oint_\gamma f(z) dz
+```
 留数捕捉了奇点最核心的局部性质。
 
 在此，我们提出本理论最大胆、也最具解释力的推论，旨在为量子力学的核心公理——玻恩定则——提供一个几何起源：
 **在一个测量过程中，系统"坍缩"到某个特定本征态 `m` 的概率幅 `ψ(m)`，等同于该次测量在时空流形上所生成的、与结果 `m` 相对应的奇点 `c_m` 处的留数 `Res(f, c_m)`。**
 
 因此，获得该结果的概率 `P(m)` 为：
-\[ P(m) = |\psi(m)|^2 \equiv |\text{Res}(f, c_m)|^2 \]
-
+```math
+P(m) = |\psi(m)|^2 \equiv |\text{Res}(f, c_m)|^2
+```
 在这个视角下，玻恩定则不再是一条需要强加于理论的外部公理，而是作为MSG模型的一个自然数学推论而涌现。量子力学的概率性，并非源于宇宙内禀的随机性，而是源于**观察者与系统相互作用时，所产生的时空奇点的几何结构特性**。一个特定的测量相互作用，以一种完全确定的方式产生了一个具有特定留数值的奇点。我们之所以体验到概率，是因为我们对世界的描述方式（概率幅）恰好就是这种底层几何结构（留数）的直接反映。
 
 这一推论将量子概率的神秘性，归结为复变函数论中一个坚实而优美的概念，为后续的能量和信号分析奠定了数学基础。
@@ -93,15 +100,21 @@
 我们从修正后的能量守恒方程 (4) 出发，结合动量守恒方程 (2) 和 (3) 进行推导。这是一个标准的代数过程，目的是消去我们不关心的末态变量（`E'_γ`, `E_e`, `p'_γ`, `p_e`），最终得到散射光子波长变化 `Δλ` 与散射角 `θ` 的关系。
 
 标准的康普顿散射公式为：
-\[ \Delta\lambda = \lambda' - \lambda = \frac{h}{m_e c}(1 - \cos\theta) \]
+```math
+\Delta\lambda = \lambda' - \lambda = \frac{h}{m_e c}(1 - \cos\theta)
+```
 当我们使用修正后的方程(4)进行推导时，会得到一个修正后的康普顿散射公式。推导过程虽然繁琐但很直接（此处省略具体代数步骤，以保持主线清晰），最终会得到一个形式如下的修正项：
-\[ \Delta\lambda_{MSG} = \frac{h}{m_e c}(1 - \cos\theta) - f(E_s, E_\gamma, \theta) \]
+```math
+\Delta\lambda_{MSG} = \frac{h}{m_e c}(1 - \cos\theta) - f(E_s, E_\gamma, \theta)
+```
 其中 `f` 是一个包含 `E_s` 的修正函数。这意味着，如果我们的理论是正确的，那么精确的康普顿散射实验所测得的波长变化，会系统性地偏离标准公式的预测。这个偏差，就直接对应于 `E_s` 的大小。
 
 ### 3.3 核心方程：`E_s = E_c² / E_0`
 
 现在，我们进行最关键的一步理论构建。我们假设 `E_s` 与 `E_c` (即`E_γ`) 和 `E_0` 之间存在一个简单的幂律关系：
-\[ E_s = k \cdot E_c^\alpha \cdot E_0^\beta \]
+```math
+E_s = k \cdot E_c^\alpha \cdot E_0^\beta
+```
 其中 `k`, `α`, `β` 是待定常数。
 从量纲分析可知，`k` 必须是无量纲的。从物理直觉上，我们提出以下三个约束条件：
 1.  **观察者能量越大，奇点效应应越强**：`α > 0`。
@@ -109,7 +122,9 @@
 3.  **对称性与简洁性**：我们寻求最简洁的物理解释。一个非常自然的假设是，观察者与被观察者在能量交换中处于一种"二次"或"平方"关系，这在物理学中很常见（如电场能、动能）。我们最大胆的猜测是 `α = 2` 和 `β = -1`。
 
 将 `α=2, β=-1` 代入，并假设无量纲常数 `k=1`（这可以通过单位的重新定义来实现，或者说，我们相信自然法则本身就是优美的），我们便得到了本理论的核心方程：
-\[ E_s = \frac{E_c^2}{E_0} \]
+```math
+E_s = \frac{E_c^2}{E_0}
+```
 其中，`E_c` 是观察者（入射光子）的能量，`E_0` 是被观察者（靶粒子）的静止能量。
 
 这个方程的意义是极其深远的：
