--- a/0822.md
+++ b/0822.md
@@ -21,7 +21,7 @@ J(\rho) \propto \int_{-\infty}^{\infty} u(\sqrt{\rho^2 + z^2}) \, dz \propto \in
 ```math
 J(\rho) \propto \frac{1}{\rho^3}
 ```
-推导势函数 V(J): 我们将此J(ρ)的形式代入其运动方程 ∇²J = -V'(J)。在二维极坐标下，∇² J(\rho) ∝ \rho⁻⁵。由于 ρ ∝ J⁻¹/³，我们可以得到 ρ⁻⁵ ∝ (J⁻¹/³)⁻⁵ = J⁵/³。由此，我们建立了连接我们理论与GR的关键桥梁：
+推导势函数 V(J): 我们将此J(ρ)的形式代入其运动方程 ∇²J = -V'(J)。在二维极坐标下，$∇² J(\rho) ∝ \rho⁻⁵。由于 ρ ∝ J⁻¹/³$，我们可以得到 $ρ⁻⁵ ∝ (J⁻¹/³)⁻⁵ = J⁵/³$。由此，我们建立了连接我们理论与GR的关键桥梁：
 ```math
 V'(J) = -k \cdot J^{5/3}
 ```
@@ -39,7 +39,7 @@ J(k,θ,τ) = J₀(k) + J_p(k,θ,τ) \quad , \quad |J_p| \ll |J₀|
 ```math
 \left(\frac{\partial^2}{\partial \tau^2} - \nabla^2\right)J_p = \frac{5k}{3} J_0(k)^{2/3} J_p
 ```
-我们寻找形如 J_p = A_{nm}(k,θ) e^{iωτ} 的波状解。代入上式后，我们得到一个关于空间部分A_nm的亥姆霍兹方程。将其用傅里叶-贝塞尔级数展开 A_{nm}(k,θ) = C_{nm} J_n(\alpha_{nm} k) e^{inθ}，并利用 ∇² A_{nm} = -α_{nm}² A_{nm} 的性质，我们最终可以推导出扰动模式(n,m)的色散关系 (Dispersion Relation)：
+我们寻找形如 $J_p = A_{nm}(k,θ) e^{iωτ}$ 的波状解。代入上式后，我们得到一个关于空间部分A_nm的亥姆霍兹方程。将其用傅里叶-贝塞尔级数展开 $A_{nm}(k,θ) = C_{nm} J_n(\alpha_{nm} k) e^{inθ}$，并利用 ∇² A_{nm} = -α_{nm}² A_{nm} 的性质，我们最终可以推导出扰动模式(n,m)的色散关系 (Dispersion Relation)：
 ```math
 \omega^2 = \alpha_{nm}^2 - \frac{5k}{3} J_0(k)^{2/3}
 ```
@@ -53,8 +53,8 @@ B.4 结论：结构的自发形成
 \alpha_{nm}^2 < \frac{5k}{3} J_0(k)^{2/3}
 ```
 物理诠释:
-这个条件揭示了一场“拔河比赛”。α_nm² 代表了扰动模式(n,m)内禀的几何刚性，它抵抗变形。而右手边则代表了由背景场J₀和非线性自相互作用提供的驱动力。当驱动力足够强大，能够克服一个模式的几何刚性时，这个模式就会被放大，系统失稳。
-由于背景场J₀(k)在星系中心区域非常强大，对于那些几何刚性较弱（α_nm²较小）的模式——特别是n=2（两臂螺旋）等低阶模式——这个不稳定性条件几乎必然会在某个径向区域内被满足。
+这个条件揭示了一场“拔河比赛”。&α_nm²& 代表了扰动模式(n,m)内禀的几何刚性，它抵抗变形。而右手边则代表了由背景场J₀和非线性自相互作用提供的驱动力。当驱动力足够强大，能够克服一个模式的几何刚性时，这个模式就会被放大，系统失稳。
+由于背景场J₀(k)在星系中心区域非常强大，对于那些几何刚性较弱（$α_nm²$较小）的模式——特别是n=2（两臂螺旋）等低阶模式——这个不稳定性条件几乎必然会在某个径向区域内被满足。
 总结
 这个模型展示了一个清晰的逻辑链条：一个与GR兼容的、纯粹几何的J场论，其内在的非线性动力学，必然导致一个轴对称的构型（如星系核球）是不稳定的。系统为了寻求更稳定的状态，会自发地破缺其对称性，并指数级地放大那些最不稳定的非对称模式。这些被放大的、最终达到非线性饱和的稳定模式，正是我们宏观上所观测到的星系旋臂。
 因此，在这个框架下，星系的壮丽结构并非源于随机的外部扰动，而是基础几何动力学定律的一种必然的、可预测的数学后果。
