--- a/0822.md
+++ b/0822.md
@@ -53,7 +53,7 @@ B.4 结论：结构的自发形成
 \alpha_{nm}^2 < \frac{5k}{3} J_0(k)^{2/3}
 ```
 物理诠释:
-这个条件揭示了一场“拔河比赛”。 $α_nm²& 代表了扰动模式(n,m)内禀的几何刚性，它抵抗变形。而右手边则代表了由背景场J₀和非线性自相互作用提供的驱动力。当驱动力足够强大，能够克服一个模式的几何刚性时，这个模式就会被放大，系统失稳。
+这个条件揭示了一场“拔河比赛”。 $α_nm²$ 代表了扰动模式(n,m)内禀的几何刚性，它抵抗变形。而右手边则代表了由背景场J₀和非线性自相互作用提供的驱动力。当驱动力足够强大，能够克服一个模式的几何刚性时，这个模式就会被放大，系统失稳。
 由于背景场J₀(k)在星系中心区域非常强大，对于那些几何刚性较弱（ $α_nm²$较小）的模式——特别是n=2（两臂螺旋）等低阶模式——这个不稳定性条件几乎必然会在某个径向区域内被满足。
 总结
 这个模型展示了一个清晰的逻辑链条：一个与GR兼容的、纯粹几何的J场论，其内在的非线性动力学，必然导致一个轴对称的构型（如星系核球）是不稳定的。系统为了寻求更稳定的状态，会自发地破缺其对称性，并指数级地放大那些最不稳定的非对称模式。这些被放大的、最终达到非线性饱和的稳定模式，正是我们宏观上所观测到的星系旋臂。
