--- a/0822.md
+++ b/0822.md
@@ -31,7 +31,7 @@ B.3 动力学、稳定性与扰动分析
 ```math
 \left(\frac{\partial^2}{\partial \tau^2} - \nabla^2\right)J = -V'(J) = k J^{5/3}
 ```
-我们研究一个强大的、静态的、轴对称的基态解 J₀(k)（代表星系核球）的稳定性。我们引入一个微小的、非轴对称的扰动 J_p(k,θ,τ)：
+我们研究一个强大的、静态的、轴对称的基态解 J₀(k)（代表星系核球）的稳定性。我们引入一个微小的、非轴对称的扰动 $J_p(k,θ,τ)$：
 ```math
 J(k,θ,τ) = J₀(k) + J_p(k,θ,τ) \quad , \quad |J_p| \ll |J₀|
 ```
