--- a/0822.md
+++ b/0822.md
@@ -47,7 +47,7 @@ B.4 结论：结构的自发形成
 这个色散关系是本理论的核心动力学预测。
 稳定性分析:
 如果 ω² > 0，则ω为实数，扰动表现为稳定的、传播的波。
-如果 ω² < 0，则ω为虚数，扰动 e^{iωτ} 会随τ指数增长，系统是不稳定的。
+如果 ω² < 0，则ω为虚数，扰动 $e^{iωτ}$ 会随τ指数增长，系统是不稳定的。
 不稳定性条件: 系统的失稳条件为 ω² < 0，即：
 ```math
 \alpha_{nm}^2 < \frac{5k}{3} J_0(k)^{2/3}
