--- a/0822.md
+++ b/0822.md
@@ -21,7 +21,7 @@ J(\rho) \propto \int_{-\infty}^{\infty} u(\sqrt{\rho^2 + z^2}) \, dz \propto \in
 ```math
 J(\rho) \propto \frac{1}{\rho^3}
 ```
-推导势函数 V(J): 我们将此J(ρ)的形式代入其运动方程 $∇²J = -V'(J)$。在二维极坐标下， $∇² J(\rho)∝\rho⁻⁵$。由于 $ρ∝J⁻¹/³$，我们可以得到 $ρ⁻⁵∝(J⁻¹/³)⁻⁵= J⁵/³$。由此，我们建立了连接我们理论与GR的关键桥梁：
+推导势函数 V(J): 我们将此J(ρ)的形式代入其运动方程 $∇²J = -V'(J)$。在二维极坐标下， $∇^{2}J(\rho)∝\rho^{-5}$。由于 $ρ∝J⁻¹/³$，我们可以得到 $ρ⁻⁵∝(J^{-1/3)⁻⁵= J^{3/5}$。由此，我们建立了连接我们理论与GR的关键桥梁：
 ```math
 V'(J) = -k \cdot J^{5/3}
 ```
@@ -35,7 +35,7 @@ B.3 动力学、稳定性与扰动分析
 ```math
 J(k,θ,τ) = J₀(k) + J_p(k,θ,τ) \quad , \quad |J_p| \ll |J₀|
 ```
-将此代入运动方程并进行线性化（即 (J₀+J_p)⁵/³ ≈ J₀⁵/³ + (5/3)J₀²/³ J_p），我们得到扰动场J_p所遵循的线性化运动方程：
+将此代入运动方程并进行线性化（即 $(J₀+J_p)^{5/3}≈ J₀^{5/3}+(5/3)J₀^{2/3}J_p$），我们得到扰动场J_p所遵循的线性化运动方程：
 ```math
 \left(\frac{\partial^2}{\partial \tau^2} - \nabla^2\right)J_p = \frac{5k}{3} J_0(k)^{2/3} J_p
 ```
