--- a/0822.md
+++ b/0822.md
@@ -21,7 +21,7 @@ J(\rho) \propto \int_{-\infty}^{\infty} u(\sqrt{\rho^2 + z^2}) \, dz \propto \in
 ```math
 J(\rho) \propto \frac{1}{\rho^3}
 ```
-推导势函数 V(J): 我们将此J(ρ)的形式代入其运动方程 $∇²J = -V'(J)$。在二维极坐标下， $∇^{2}J(\rho)∝\rho^{-5}$。由于 $ρ∝J⁻¹/³$，我们可以得到 $ρ⁻⁵∝(J^{-1/3)⁻⁵= J^{3/5}$。由此，我们建立了连接我们理论与GR的关键桥梁：
+推导势函数 V(J): 我们将此J(ρ)的形式代入其运动方程 $∇²J = -V'(J)$。在二维极坐标下， $∇^{2}J(\rho)∝\rho^{-5}$。由于 $ρ∝J⁻¹/³$，我们可以得到 $ρ⁻⁵∝(J^{-1/3})⁻⁵= J^{3/5}$ 。由此，我们建立了连接我们理论与GR的关键桥梁：
 ```math
 V'(J) = -k \cdot J^{5/3}
 ```
