--- a/0822.md
+++ b/0822.md
@@ -11,6 +11,9 @@ B.1 理论框架：二维基础平面的动力学
 ```math
 \nabla^2 J(x) = - \frac{dV(J)}{dJ} = -V'(J)
 ```
+```math
+1/y*（1-1/（1+y/f)^(f*n)）
+```
 B.2 与广义相对论的对应关系
 为了将此理论与我们观测到的宇宙联系起来，我们要求它能在宏观尺度上重现GR的效应。我们通过一个积分投影操作，将一个由GR描述的三维静态球对称引力场的能量密度（u ∝ 1/r⁴）投影到二维基础平面上，以定义相应的J场。
 投影定义: 二维J场在某一点ρ的值，定义为三维引力场能量密度u沿垂直方向z的积分：
