--- a/0822.md
+++ b/0822.md
@@ -15,7 +15,7 @@ B.1 理论框架：二维基础平面的动力学
 \frac{1}{y}（1-\frac{1}{（1+y/f)^{f*n}}）
 ```
 ```math
-
+\text{价格} P = \sum_{i=1}^{f \times n} \frac{100 \times C / f}{(1 + R / f)^i} + \frac{100}{(1 + R / f)^{f \times n}}
 ```
 B.2 与广义相对论的对应关系
 为了将此理论与我们观测到的宇宙联系起来，我们要求它能在宏观尺度上重现GR的效应。我们通过一个积分投影操作，将一个由GR描述的三维静态球对称引力场的能量密度（u ∝ 1/r⁴）投影到二维基础平面上，以定义相应的J场。
