--- a/0822.md
+++ b/0822.md
@@ -12,7 +12,7 @@ B.1 理论框架：二维基础平面的动力学
 \nabla^2 J(x) = - \frac{dV(J)}{dJ} = -V'(J)
 ```
 ```math
-、、、\frac{1}{y}（1-\frac{1}{（1+y/f)^{f*n}}）
+、、、\frac{1}{y}（1-\frac{1}{（1+y/f)^{f \time n}}）
 ```
 ```math
 、、、\text{理论结算价格} P = \sum_{i=1}^{f \times n} \frac{100 \times C / f}{(1 + R / f)^i} + \frac{100}{(1 + R / f)^{f \times n}}
