--- a/0822.md
+++ b/0822.md
@@ -59,3 +59,5 @@ B.4 结论：结构的自发形成
 总结
 这个模型展示了一个清晰的逻辑链条：一个与GR兼容的、纯粹几何的J场论，其内在的非线性动力学，必然导致一个轴对称的构型（如星系核球）是不稳定的。系统为了寻求更稳定的状态，会自发地破缺其对称性，并指数级地放大那些最不稳定的非对称模式。这些被放大的、最终达到非线性饱和的稳定模式，正是我们宏观上所观测到的星系旋臂。
 因此，在这个框架下，星系的壮丽结构并非源于随机的外部扰动，而是基础几何动力学定律的一种必然的、可预测的数学后果。
+
+$\sqrt{d_{model}} \approx \sqrt{512} \approx 22$
