--- a/0822.md
+++ b/0822.md
@@ -61,3 +61,4 @@ B.4 结论：结构的自发形成
 因此，在这个框架下，星系的壮丽结构并非源于随机的外部扰动，而是基础几何动力学定律的一种必然的、可预测的数学后果。
 
 $\sqrt{d_{model}} \approx \sqrt{512} \approx 22$
+$$ \text{SwiGLU}(x) = (x W_1) \otimes \text{Swish}(x W_2) $$
