--- a/0822.md
+++ b/0822.md
@@ -62,4 +62,6 @@ B.4 结论：结构的自发形成
 
 $\sqrt{d_{model}} \approx \sqrt{512} \approx 22$
 
-$ \text{SwiGLU}(x) = (x W_1) \otimes \text{Swish}(x W_2) $
+$\text{SwiGLU}(x) = (x W_1) \otimes \text{Swish}(x W_2)$
+
+$GLU(E_A, E_B) = (E_A \cdot W_1) \otimes \sigma(E_B \cdot W_2)$
