--- a/0822.md
+++ b/0822.md
@@ -65,10 +65,13 @@ $\sqrt{d_{model}} \approx \sqrt{512} \approx 22$
 $\text{SwiGLU}(x) = (x W_1) \otimes \text{Swish}(x W_2)$
 
 $GLU(E_A, E_B) = (E_A \cdot W_1) \otimes \sigma(E_B \cdot W_2)$
+
 Train 模式（局部视角）：
-计算方式：$y = \frac{x - \mu_{batch}}{\sigma_{batch}} \cdot \gamma + \beta$
+计算方式：
+$y = \frac{x - \mu_{batch}}{\sigma_{batch}} \cdot \gamma + \beta$
 含义：模型在训练（或者像你之前的 Step 7 生成 Embedding）时，只看当前这一批次（Batch）的数据。它认为这 1024 个样本的均值就是“世界的中心”。
 Running Stats 的角色：在这个模式下，running_mean 和 running_var 只是默默地在后台做记录（滑动平均更新），并不参与当前的数据计算。
 Eval 模式（全局视角）：
-计算方式：$y = \frac{x - \mu_{running}}{\sigma_{running}} \cdot \gamma + \beta$
+计算方式：
+$y = \frac{x - \mu_{running}}{\sigma_{running}} \cdot \gamma + \beta$
 含义：模型使用训练过程中积累下来的 running_mean 和 running_var。这是它眼中的“全宇宙的中心”。
