--- a/0822.md
+++ b/0822.md
@@ -75,3 +75,5 @@ Eval 模式（全局视角）：
 计算方式：
 $y = \frac{x - \mu_{running}}{\sigma_{running}} \cdot \gamma + \beta$
 含义：模型使用训练过程中积累下来的 running_mean 和 running_var。这是它眼中的“全宇宙的中心”。
+
+$30.5 \times 10^9 \times 2 \text{ Bytes} \approx 61 \text{ GB}$
