--- a/0822.md
+++ b/0822.md
@@ -76,6 +76,47 @@ Eval 模式（全局视角）：
 $y = \frac{x - \mu_{running}}{\sigma_{running}} \cdot \gamma + \beta$
 含义：模型使用训练过程中积累下来的 running_mean 和 running_var。这是它眼中的“全宇宙的中心”。
 
+
+
+
+
 $30.5 \times 10^9 \times 2 \text{ Bytes} \approx 61 \text{ GB}$
 
 $P(w_t | w_{1...t-1})$
+
+1. 总体概览（大数）
+总参数量：约 32.8 Billion (328亿)
+层数：64 层
+每层参数量：约 5 亿 (0.5B) 参数/层（32.8B / 64 ≈ 0.51B）
+2. 单层内部拆解（精确到矩阵）
+每一层 Transformer Block 主要由两大部分组成：Attention（注意力） 和 FFN（前馈网络）。
+A. Attention 部分（大脑的扫描雷达）
+这一部分负责“计算关系”。
+矩阵数量：4 个主要矩阵（Q, K, V, O）
+W_q (Query): 5120 × 5120
+W_k (Key): 5120 × 640 (注意：因为是 GQA，K 头数是 8，8 * 128 = 1024? 不，配置里 num_key_value_heads=8, head_dim=128 -> 8*128=1024。通常 GQA 会把 KV 维度降下来。这里为了简化演讲，可以说 K/V 矩阵比 Q 小很多)。
+更正: Qwen3-32B 配置 num_attention_heads=64, num_key_value_heads=8。
+W_q: 5120 (hidden) -> 5120 (64 heads * 128 dim)
+W_k: 5120 (hidden) -> 1024 (8 heads * 128 dim)
+W_v: 5120 (hidden) -> 1024 (8 heads * 128 dim)
+W_o (Output): 5120 -> 5120
+参数量计算：
+$5120 \times 5120 \approx 26M$ (W_q)
+$5120 \times 1024 \approx 5M$ (W_k)
+$5120 \times 1024 \approx 5M$ (W_v)
+$5120 \times 5120 \approx 26M$ (W_o)
+Attention 总计：约 62 Million (0.6亿) 参数。
+B. FFN 部分（知识的存储仓库）
+这一部分负责“存储和提取知识”，是参数的大头。
+Qwen 使用的是 SwiGLU 结构，有 3 个大矩阵（Gate, Up, Down）。
+矩阵尺寸：
+Hidden Size = 5120
+Intermediate Size = 25600 (宽到令人发指，是 Hidden 的 5 倍)
+矩阵数量：3 个巨型矩阵
+W_gate: 5120 × 25600
+W_up: 5120 × 25600
+W_down: 25600 × 5120
+参数量计算：
+$5120 \times 25600 \approx 131M$
+3 个矩阵就是 $131M \times 3 \approx 393M$
+FFN 总计：约 400 Million (4亿) 参数。
