--- a/0822.md
+++ b/0822.md
@@ -96,15 +96,25 @@ A. Attention 部分（大脑的扫描雷达）
 W_q (Query): 5120 × 5120
 W_k (Key): 5120 × 640 (注意：因为是 GQA，K 头数是 8，8 * 128 = 1024? 不，配置里 num_key_value_heads=8, head_dim=128 -> 8*128=1024。通常 GQA 会把 KV 维度降下来。这里为了简化演讲，可以说 K/V 矩阵比 Q 小很多)。
 更正: Qwen3-32B 配置 num_attention_heads=64, num_key_value_heads=8。
+
 W_q: 5120 (hidden) -> 5120 (64 heads * 128 dim)
+
 W_k: 5120 (hidden) -> 1024 (8 heads * 128 dim)
+
 W_v: 5120 (hidden) -> 1024 (8 heads * 128 dim)
+
 W_o (Output): 5120 -> 5120
+
 参数量计算：
-$5120 \times 5120 \approx 26M$ (W_q)
-$5120 \times 1024 \approx 5M$ (W_k)
-$5120 \times 1024 \approx 5M$ (W_v)
-$5120 \times 5120 \approx 26M$ (W_o)
+$W_q$
+$5120 \times 5120 \approx 26M$ 
+$W_k$
+$5120 \times 1024 \approx 5M$ 
+$W_v$
+$5120 \times 1024 \approx 5M$ 
+$W_o$
+$5120 \times 5120 \approx 26M$ 
+
 Attention 总计：约 62 Million (0.6亿) 参数。
 B. FFN 部分（知识的存储仓库）
 这一部分负责“存储和提取知识”，是参数的大头。
