--- a/0822.md
+++ b/0822.md
@@ -133,6 +133,14 @@ W_gate: 5120 × 25600
 W_up: 5120 × 25600
 W_down: 25600 × 5120
 参数量计算：
+
+
 $5120 \times 25600 \approx 131M$
-3 个矩阵就是 $131M \times 3 \approx 393M$
+
+
+3 个矩阵就是 
+
+$131M \times 3 \approx 393M$
+
+
 FFN 总计：约 400 Million (4亿) 参数。
