--- a/0822.md
+++ b/0822.md
@@ -144,3 +144,6 @@ $131M \times 3 \approx 393M$
 
 
 FFN 总计：约 400 Million (4亿) 参数。
+
+
+$\{ O, D \} \xrightarrow{\text{Train}} \{ \hat{O}, \Phi, \mathcal{P} \}$
