--- a/0822.md
+++ b/0822.md
@@ -147,3 +147,6 @@ FFN 总计：约 400 Million (4亿) 参数。
 
 
 $\{ O, D \} \xrightarrow{\text{Train}} \{ \hat{O}, \Phi, \mathcal{P} \}$
+
+
+$Score = Q \cdot K^T - m \cdot |Distance|$
