--- a/0822.md
+++ b/0822.md
@@ -150,3 +150,6 @@ $\{ O, D \} \xrightarrow{\text{Train}} \{ \hat{O}, \Phi, \mathcal{P} \}$
 
 
 $Score = Q \cdot K^T - m \cdot |Distance|$
+
+
+$$ \text{Memory} \in \mathbb{R}^n, \quad \text{Reasoning} \in \mathbb{R}^n $$
