--- a/0822.md
+++ b/0822.md
@@ -153,3 +153,6 @@ $Score = Q \cdot K^T - m \cdot |Distance|$
 
 
 $$ \text{Memory} \in \mathbb{R}^n, \quad \text{Reasoning} \in \mathbb{R}^n $$
+
+
+$$ \text{Output} = \text{Attention}(\text{Similarity}) \times \text{Transformation}(\text{Rotation}) $$
