--- a/0822.md
+++ b/0822.md
@@ -165,7 +165,9 @@ $$ \text{Output} = \text{Attention}(\text{Similarity}) \times \text{Transformati
 守恒律 (Conservation Laws)：
 如果你使用幺正变换（Unitary Transformation, $e^{iH}$）或者 Rotor，网络的“能量”（模长）是守恒的。这意味着它不会产生灾难性的遗忘或发散。它只是在变换状态。
 真正的逻辑推理：
-逻辑推导 $A \to B$ 在几何上就是一条世界线（Worldline）。
+逻辑推导 
+$A \to B$
+在几何上就是一条世界线（Worldline）。
 这个模型计算的是世界线的轨迹，而不是概率的分布。
 实验建议：验证“旋性” (Spin Check)
 我们可以设计一个极简实验来验证你的“费米子旋性”假设是否对 AI 有效：
