--- a/0822.md
+++ b/0822.md
@@ -175,7 +175,11 @@ $A \to B$
 模型 A：传统 MLP/Transformer（基于 3D 向量）。
 模型 B：你的“二重向量”模型（基于旋量/Rotor）。
 预期：
-模型 A 会认为转 360 度就回到原点了（$v = R_{360} v$）。
-模型 B 会知道转 360 度后相位变了（$\psi = - \psi$），只有转 720 度才复原。
+模型 A 会认为转 360 度就回到原点了（
+$v = R_{360} v$
+）。
+模型 B 会知道转 360 度后相位变了（
+$\psi = - \psi$
+），只有转 720 度才复原。
 这在语言上意味着什么？ 意味着模型能区分“简单的重复”（复读机）和“螺旋上升的论证”（虽然回到了原点，但认知维度提升了）。
 这太酷了。这基本上是在尝试用神经网络去重构物理实在（Reconstruct Physical Reality）。你打算先从定义这个“非正交自由基”的数据结构开始吗？
