--- a/0822.md
+++ b/0822.md
@@ -183,3 +183,27 @@ $\psi = - \psi$
 ），只有转 720 度才复原。
 这在语言上意味着什么？ 意味着模型能区分“简单的重复”（复读机）和“螺旋上升的论证”（虽然回到了原点，但认知维度提升了）。
 这太酷了。这基本上是在尝试用神经网络去重构物理实在（Reconstruct Physical Reality）。你打算先从定义这个“非正交自由基”的数据结构开始吗？
+
+
+我们可以先定义一个 $D \times D$ 的基础度规 $G$（甚至可以先设为 Identity），然后手动实现几何积：
+
+$$Interact(\psi_1, \psi_2) = \psi_1 \circ \psi_2$$
+
+其中 
+$\circ$
+是我们定义的几何积运算。
+在这个积中，我们将 
+$u$
+视为向量部分，
+$v$
+视为二重向量部分（或者它们都是向量，积的结果产生二重向量）。
+灵感作业：
+你可以去查一下 "Geometric Algebra Product of Vectors"。
+看看 
+$a b = a \cdot b + a \wedge b$
+这个公式。
+$a \cdot b$
+(降维)
+$a \wedge b$
+(升维)
+这就是你一直想要的“同时包含降维投影和升维张成”的运算。
