--- a/第一章：维度阶梯理论的拓扑基础.md
+++ b/第一章：维度阶梯理论的拓扑基础.md
@@ -39,7 +39,7 @@
 **Topo(N)** 并非传统意义上的几何维度，而是物理系统容纳**非同伦叠加态**的**拓扑容量**。
 
 *   **定义**：Topo(N) 是一个递归定义的结构化算子，它允许在同一系统内**共存**且**区分** $N$ 层非同伦的子结构。
-    *   **同伦叠加 $\to$ 融合**：若子状态 $A \sim B$（同伦），叠加导致融合或简并，系统回退向 Topo(0)。
+    *   **同伦叠加 $\to$ 融合**：若子状态 $A \sim B$（同伦），叠加导致融合或简并，系统回退向 Topo(0,inf)。
     *   **非同伦叠加 $\to$ 构造**：若子状态 $A \not\sim B$（非同伦），叠加迫使系统撑开新的自由度空间以容纳这种拓扑冲突。
 *   **物理意义**：**非同伦嵌入 $\equiv$ 叠加**。物理实在的丰富程度（维度 N），完全取决于系统能够容纳多少层非同伦的逻辑冲突而不致崩溃。
 
