--- a/第一章：维度阶梯理论的拓扑基础.md
+++ b/第一章：维度阶梯理论的拓扑基础.md
@@ -53,7 +53,7 @@
 
 物理生成的起点并非真空，而是 Topo(N) 叠加容量中的**拓扑冲突**。
 
-设想一个 Topo(K) 子结构 $\mathcal{S}_{sub}$ 试图嵌入到 Topo(M) 父结构 $\mathcal{S}_{parent}$ 的约束网络中（其中 Topo(0) 为各自的自洽内核，Topo(inf) 为各自的全局规则）。
+设想一个 Topo(K) 子结构 $\mathcal{S}_{sub}$ _试图嵌入到 Topo(M) 父结构 $\mathcal{S}_{parent}$ 的约束网络中（其中 Topo(0) 为各自的自洽内核，Topo(inf) 为各自的全局规则）。
 
 *   **同伦嵌入 (Homotopic Embedding)**：若 $\mathcal{S}_{sub}$ 与 $\mathcal{S}_{parent}$ 的规则兼容（同伦），则 $\mathcal{S}_{sub}$ 会平滑地融入背景，其独立性消失，系统退化为单一的整体。物理上表现为**融合**或**不可区分**。
 *   **非同伦嵌入 (Non-homotopic Embedding)**：若两者规则本质冲突（如拓扑荷不匹配、手性相反），则 $\mathcal{S}_{sub}$ 无法被背景同化。这种**“异物感”**产生了持续的拓扑张力。
@@ -62,7 +62,7 @@
 
 绝大多数非同伦嵌入会导致系统的混乱、奇异性或不稳定振荡。唯有在一种特殊条件下，这种冲突会收敛为稳定的结构：**差一阶条件（Codimension-1 Condition）**。
 
-*   **全息共振条件**：当且仅当子结构的维度 $K$ 恰好为父结构维度 $M-1$ 时（$K = M-1$），非同伦冲突产生的拓扑张力有可能被**完整且闭合地分布**在一个界面上。
+*   **全息共振条件**：当且仅当子结构的维度 $K$ 恰好为父结构维度 $M-1$ 时（ $K = M-1$ ），非同伦冲突产生的拓扑张力有可能被**完整且闭合地分布**在一个界面上。
 *   **界性 (Topo 1) 的生成**：
     *   在这种特殊嵌入下，原本弥散的拓扑张力坍缩为一个清晰的**“相面”**。
     *   这个面既属于 $\mathcal{S}_{sub}$（作为其表皮），也属于 $\mathcal{S}_{parent}$（作为其空洞边界）。
