--- a/第一章：维度阶梯理论的拓扑基础.md
+++ b/第一章：维度阶梯理论的拓扑基础.md
@@ -2,9 +2,9 @@
 
 ## 1. 原生拓扑本原 (Primordial Topological Primitives)
 
-物理理论的构建通常隐含了“先验空间”的假设，即假定存在一个由点集构成的舞台（如希尔伯特空间）来承载物理事件。然而，这种基于经典集合论的视角掩盖了物理实在更深层的生成机制。在本理论中，我们尝试构建一个基于**二元拓扑本原**与**动态递归算子**的生成系统。
+物理理论的构建通常隐含了“先验空间”的假设，即假定存在一个由点集构成的舞台（如希尔伯特空间）来承载物理事件。然而，这种基于经典集合论的视角掩盖了物理实在更深层的生成机制。在本理论中，我们摒弃“空间先于规则”的预设，转而构建一个基于**二元拓扑本原**与**动态递归算子**的生成系统。
 
-这并非一套静态的几何描述，而是一套生成物理实在的**递归代数系统**。它与现代数学中的范畴论（Category Theory）、无点拓扑（Pointless Topology）及代数量子场论（AQFT）的底层逻辑存在深刻的共鸣。
+这并非一套静态的几何描述，而是一套生成物理实在的**递归代数系统**。它与现代数学中的范畴论（Category Theory）、无点拓扑（Pointless Topology）及代数量子场论（AQFT）的呼应。
 
 本理论提出**存在的二重性公理**：物理实在的潜能必须由一对共轭且不可约的拓扑结构——**Topo(0)** 与 **Topo(inf)** ——共同定义。
 
@@ -39,7 +39,7 @@
 **Topo(N)** 并非传统意义上的几何维度，而是物理系统容纳**非同伦叠加态**的**拓扑容量**。
 
 *   **定义**：Topo(N) 是一个递归定义的结构化算子，它允许在同一系统内**共存**且**区分** $N$ 层非同伦的子结构。
-    *   **同伦叠加 $\to$ 融合**：若子状态 $A \sim B$（同伦），叠加导致融合或简并，系统回退向 Topo(0,inf)。
+    *   **同伦叠加 $\to$ 融合**：若子状态 $A \sim B$（同伦），叠加导致融合或简并，系统任然为 Topo(0,inf)。
     *   **非同伦叠加 $\to$ 构造**：若子状态 $A \not\sim B$（非同伦），叠加迫使系统撑开新的自由度空间以容纳这种拓扑冲突。
 *   **物理意义**：**非同伦嵌入 $\equiv$ 叠加**。物理实在的丰富程度（维度 N），完全取决于系统能够容纳多少层非同伦的逻辑冲突而不致崩溃。
 
@@ -53,19 +53,19 @@
 
 物理生成的起点并非真空，而是 Topo(N) 叠加容量中的**拓扑冲突**。
 
-设想一个 Topo(K) 子结构 $\mathcal{S}_{sub}$ 试图嵌入到 Topo(M) 父结构 $\mathcal{S}_{parent}$ 的约束网络中（其中 Topo(0) 为各自的自洽内核，Topo(inf) 为各自的全局规则）。
+设想一个 Topo(K) 子结构 $\mathcal{S}_K$ 试图嵌入到 Topo(M) 父结构 $\mathcal{S}_M$ 的约束网络中（其中 Topo(0) 为各自的自洽内核，Topo(inf) 为各自的全局规则）。
 
-*   **同伦嵌入 (Homotopic Embedding)**：若 $\mathcal{S}_{sub}$ 与 $\mathcal{S}_{parent}$ 的规则兼容（同伦），则 $\mathcal{S}_{sub}$ 会平滑地融入背景，其独立性消失，系统退化为单一的整体。物理上表现为**融合**或**不可区分**。
-*   **非同伦嵌入 (Non-homotopic Embedding)**：若两者规则本质冲突（如拓扑荷不匹配、手性相反），则 $\mathcal{S}_{sub}$ 无法被背景同化。这种**“异物感”**产生了持续的拓扑张力。
+*   **同伦嵌入 (Homotopic Embedding)**：若 $\mathcal{S}_K$ 与 $\mathcal{S}_M$ 的规则兼容（同伦），则 $\mathcal{S}_K$ 会平滑地融入背景，其独立性消失，系统退化为单一的整体。物理上表现为**融合**或**不可区分**。
+*   **非同伦嵌入 (Non-homotopic Embedding)**：若两者规则本质冲突（如拓扑荷不匹配、手性相反），则 $\mathcal{S}_K$ 无法被背景同化。这种**“异物感”**产生了持续的拓扑张力。
 
 ### 2.2 边界的涌现：差一阶的奇迹 (Emergence of Boundary: The Miracle of Codimension-1)
 
 绝大多数非同伦嵌入会导致系统的混乱、奇异性或不稳定振荡。唯有在一种特殊条件下，这种冲突会收敛为稳定的结构：**差一阶条件（Codimension-1 Condition）**。
 
-*   **全息共振条件**：当且仅当子结构的维度 $K$ 恰好为父结构维度 $M-1$ 时（ $K = M-1$ ），非同伦冲突产生的拓扑张力有可能被**完整且闭合地分布**在一个界面上。
+*   **全息共振条件**：当且仅当子结构的维度 $K$ 恰好为父结构维度 $M-1$ 时（$K = M-1$），非同伦冲突产生的拓扑张力有可能被**完整且闭合地分布**在一个界面上。
 *   **界性 (Topo 1) 的生成**：
     *   在这种特殊嵌入下，原本弥散的拓扑张力坍缩为一个清晰的**“相面”**。
-    *   这个面既属于 $\mathcal{S}_{sub}$（作为其表皮），也属于 $\mathcal{S}_{parent}$（作为其空洞边界）。
+    *   这个面既属于 $\mathcal{S}_K$（作为其表皮），也属于 $\mathcal{S}_M$（作为其空洞边界）。
     *   **定义**：**Topo(1) 界性**即为这种“通过差一阶非同伦嵌入，将拓扑冲突转化为稳定闭合边界”的能力。
 *   **物理意义**：这是**“实体”**诞生的时刻。没有这个边界，非同伦态只是混乱的噪音；有了边界，它就成了**“物体”**。
 
@@ -118,10 +118,10 @@
 基于 4D 的特殊性，物理时空的最底层结构并非 4 个正交的 1D 轴，而是由两个 **2D 非同伦子空间** 互嵌而成的**二重向量基**。
 
 *   **定义**：物理实体的基本元 $\mathcal{B}$ 由两个同阶但非同伦的 2D 拓扑基张成：
-    $$ \mathcal{B} = \text{span}(\mathcal{S}_{pos}^2, \mathcal{S}_{phase}^2) $$
+    $$ \mathcal{B} = \text{span}(\mathcal{S}_{x}^2, \mathcal{S}_{\phi}^2) $$
 *   **物理含义**：
-    *   **$\mathcal{S}_{pos}^2$ (位置基)**：承载 Topo(0) 的定位信息，对应于广义坐标中的位置自由度。
-    *   **$\mathcal{S}_{phase}^2$ (相位/内禀基)**：承载 Topo(1) 的界性信息，对应于粒子的内禀属性（如自旋、质量源）。
+    *   **$\mathcal{S}_{x}^2$ (位置基)**：承载 Topo(0) 的定位信息，对应于广义坐标中的位置自由度。
+    *   **$\mathcal{S}_{\phi}^2$ (相位/内禀基)**：承载 Topo(1) 的界性信息，对应于粒子的内禀属性（如自旋、同位旋、质量源）。
 *   **非正交互锁**：这两个 2D 基并非简单的直积，而是通过非同伦嵌入形成的**互锁结构**。在量子尺度下，这种纠缠导致了自旋 1/2（双覆盖）和波粒二象性的涌现。## 3. 维度阶梯与二重向量基 (Dimensional Ladder and Dual Vector Basis)
 
 本节将维度的定义从线性代数的“坐标轴数量”提升为 Topo(N) 理论中的**递归叠加容量**，并论证为何物理实在必然呈现为特殊的 4D 结构。
