--- a/第一章：维度阶梯理论的拓扑基础.md
+++ b/第一章：维度阶梯理论的拓扑基础.md
@@ -65,7 +65,7 @@
 *   **全息共振条件**：当且仅当子结构的维度 $K$ 恰好为父结构维度 $M-1$ 时（ $K = M-1$ ），非同伦冲突产生的拓扑张力有可能被**完整且闭合地分布**在一个界面上。
 *   **界性 (Topo 1) 的生成**：
     *   在这种特殊嵌入下，原本弥散的拓扑张力坍缩为一个清晰的**“相面”**。
-    *   这个面既属于 $\mathcal{S}_K$（作为其表皮），也属于 $\mathcal{S}_M$（作为其空洞边界）。
+    *   这个面既属于 $\mathcal{S}_K$ ，也属于 $\mathcal{S}_M$ 。
     *   **定义**：**Topo(1) 界性**即为这种“通过差一阶非同伦嵌入，将拓扑冲突转化为稳定闭合边界”的能力。
 *   **物理意义**：这是**“实体”**诞生的时刻。没有这个边界，非同伦态只是混乱的噪音；有了边界，它就成了**“物体”**。
 
