--- a/第一章：维度阶梯理论的拓扑基础.md
+++ b/第一章：维度阶梯理论的拓扑基础.md
@@ -109,7 +109,7 @@
 *   **定义**：物理实体的基本元 $\mathcal{B}$ 由两个同阶但非同伦的 2D 拓扑基张成：
 
 
-    $$\mathcal{B} = \text{span}(\mathcal{S}_{x}^2, \mathcal{S}_{\phi}^2)$$
+    $$\mathcal{B} = \text{span}(\mathcal{S}_{x}^2, \mathcal{S}__{\phi}^2)$$
 
     
 *   **物理含义**：
