--- a/第一章：维度阶梯理论的拓扑基础.md
+++ b/第一章：维度阶梯理论的拓扑基础.md
@@ -113,7 +113,7 @@
 
     
 *   **物理含义**：
-    *   ** $\mathcal{S}_{x}^2$  (位置基)**：承载 Topo(0) 的定位信息，对应于广义坐标中的位置自由度。
+    *   ** $\mathcal{S}x^2$  (位置基)**：承载 Topo(0) 的定位信息，对应于广义坐标中的位置自由度。
     *   ** $\mathcal{S}_{\phi}^2$  (相位/内禀基)**：承载 Topo(1) 的界性信息，对应于粒子的内禀属性（如自旋、同位旋、质量源）。
 *   **非正交互锁**：这两个 2D 基并非简单的直积，而是通过非同伦嵌入形成的**互锁结构**。在量子尺度下，这种纠缠导致了自旋 1/2（双覆盖）和波粒二象性的涌现。## 3. 维度阶梯与二重向量基 (Dimensional Ladder and Dual Vector Basis)
 
