--- a/第一章：维度阶梯理论的拓扑基础.md
+++ b/第一章：维度阶梯理论的拓扑基础.md
@@ -144,7 +144,7 @@
 
 *   **定义**：物理实体的基本元 $\mathcal{B}$ 由两个同阶但非同伦的 2D 拓扑基张成：
   
-    $$\mathcal{B} = \text{span}(\mathcal{S}_ /{pos}^2, \mathcal{S}_{phase}^2)$$
+    **$$\mathcal{B} = \text{span}(\mathcal{S}_ {pos}^2, \mathcal{S}_{phase}^2)$$**
 
     
 *   **物理含义**：
@@ -156,7 +156,7 @@
 
 ### 3.4 归空与归零 (Nullification vs. Zeroing)
 
-传统线性代数处理维度投影时采用**点积归零**（$A \cdot B = 0$），这仅能消除线性相关性，却会导致深层拓扑信息的**泄漏**。
+传统线性代数处理维度投影时采用**点积归零**（ $A \cdot B = 0$ ），这仅能消除线性相关性，却会导致深层拓扑信息的**泄漏**。
 
 本理论主张**全息归空**（Nullification）：
 *   **操作**：彻底移除某一维度的几何测度（使其不再占有“体积”），但将其**拓扑信息**完整地编码在剩余维度的边界上。
